[gd_scene load_steps=23 format=2]

[ext_resource path="res://resources/toys/Flogger.tres" type="Resource" id=1]
[ext_resource path="res://resources/toys/Fungproof.tres" type="Resource" id=2]
[ext_resource path="res://scripts/scenes/MapScene.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/MessageBox.gd" type="Script" id=4]
[ext_resource path="res://resources/toys/WingedShadow.tres" type="Resource" id=5]
[ext_resource path="res://scenes/entities/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/entities/Opponent.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/textures/overworld_bg/rock.png" type="Texture" id=8]
[ext_resource path="res://scenes/overworld_items/PatchOfGrass.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/textures/overworld_bg/ground_03.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/overworld_bg/ground_02.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/overworld_bg/ground_01.png" type="Texture" id=12]
[ext_resource path="res://assets/fonts/game_font.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://resources/toys/ScaryDino.tres" type="Resource" id=14]
[ext_resource path="res://resources/toys/DemonKnight.tres" type="Resource" id=15]
[ext_resource path="res://resources/toys/BeltedTraveller.tres" type="Resource" id=16]
[ext_resource path="res://resources/toys/MaskedGolem.tres" type="Resource" id=17]
[ext_resource path="res://resources/toys/TwoOfPentacles.tres" type="Resource" id=18]
[ext_resource path="res://resources/toys/MoonSaint.tres" type="Resource" id=19]
[ext_resource path="res://assets/textures/ui/toy_icon.png" type="Texture" id=20]
[ext_resource path="res://scenes/scenes/Showcase.tscn" type="PackedScene" id=21]


[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_char = 1
extra_spacing_space = 2
font_data = ExtResource( 13 )

[node name="MapScene" type="Node2D"]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 6 )]

[node name="Opponent" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.337255, 0.764706, 0.364706, 1 )
position = Vector2( -69.4901, -89.0899 )
message_list_before_battle = [ "eheh, i love shrooms.", "eheh eheh eheh", "Oh wait you want a challenge?", "fine, guess my shroom time can wait." ]
team = [ ExtResource( 2 ) ]

[node name="Opponent4" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.8, 0.466667, 0.247059, 1 )
position = Vector2( 222.35, 152.239 )
message_list_before_battle = [ "Dinosaur Fact!", "Dinosaur are the best with or without feathers.", "But most definitly they had feathers." ]
team = [ ExtResource( 14 ) ]

[node name="Opponent5" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.580392, 0.176471, 0.364706, 1 )
position = Vector2( 253.35, 44.2394 )
message_list_before_battle = [ "I found this toy in the trashcan.", "If you win against me, you can have it." ]
team = [ ExtResource( 15 ) ]

[node name="Opponent6" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.709804, 0.301961, 0.301961, 1 )
position = Vector2( 282.341, -131.83 )
message_list_before_battle = [ "I have come from far away to seek the perfect Toy.", "Let's see you have what it takes to be the best.", "Or if you just have the best Toy." ]
team = [ ExtResource( 16 ) ]

[node name="Opponent7" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.25098, 0.223529, 0.2, 1 )
position = Vector2( -217.583, 142.527 )
message_list_before_battle = [ "It's time to rock hard!" ]
team = [ ExtResource( 17 ) ]

[node name="Opponent8" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.705882, 0.831373, 0.568627, 1 )
position = Vector2( -116.467, 205.46 )
message_list_before_battle = [ "Ehi, pick a card.", "...", "...", "You aren't picking any card...", "...", "...", "Fine, they were all Queens of Hearts." ]
team = [ ExtResource( 18 ) ]

[node name="Opponent9" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.639216, 0.188235, 0.780392, 1 )
position = Vector2( -229.604, -133.244 )
message_list_before_battle = [ "Hello, I have the waifu of this game." ]
team = [ ExtResource( 5 ) ]

[node name="Opponent2" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.168627, 0.290196, 0.215686, 1 )
position = Vector2( 72, -32 )
message_list_before_battle = [ "Flogger" ]
team = [ ExtResource( 1 ) ]

[node name="Opponent3" parent="YSort" instance=ExtResource( 7 )]
modulate = Color( 0.545098, 0.741176, 0.929412, 1 )
position = Vector2( -136.284, 7.53918 )
message_list_before_battle = [ "Yo just got this religious toy.", "It seems is sacred or something." ]
team = [ ExtResource( 19 ) ]

[node name="BackgroundItems" type="YSort" parent="YSort"]

[node name="rock" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.227451, 0.309804, 0.741176, 1 )
position = Vector2( -199.947, -17.984 )
rotation = 1.84656
scale = Vector2( 0.241515, 0.803937 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock2" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.227451, 0.309804, 0.741176, 1 )
position = Vector2( -168, 64 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock3" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.439216, 0.682353, 0.862745, 1 )
position = Vector2( 224, -152 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock4" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.439216, 0.682353, 0.862745, 1 )
position = Vector2( 352, 80 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock5" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.439216, 0.682353, 0.862745, 1 )
position = Vector2( 320, 136 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock6" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.439216, 0.682353, 0.862745, 1 )
position = Vector2( -16, 208 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="rock7" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.439216, 0.682353, 0.862745, 1 )
position = Vector2( 208, -16 )
rotation = 1.84656
scale = Vector2( 0.162237, 0.63694 )
z_index = -1
texture = ExtResource( 8 )
offset = Vector2( -78.6344, 17.0954 )

[node name="ground_06" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( -64.4628, 133.773 )
scale = Vector2( 0.222212, 0.304672 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_07" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( 155.111, -74.9413 )
rotation = 2.55171
scale = Vector2( 0.343951, 0.266493 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_08" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( 71.943, -90.8333 )
rotation = -2.89136
scale = Vector2( 0.343951, 0.266493 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_09" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( 71.943, -90.8333 )
rotation = -0.641515
scale = Vector2( 0.343951, 0.266493 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_10" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( -159.457, -16.45 )
rotation = -0.151555
scale = Vector2( 0.449298, 0.266493 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_12" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.917647, 0.894118, 0.517647, 1 )
position = Vector2( 54.1421, 151.778 )
rotation = -0.0312355
scale = Vector2( 0.404027, 0.312826 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_13" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.917647, 0.894118, 0.517647, 1 )
position = Vector2( 16, -142.322 )
rotation = 3.07389
scale = Vector2( 0.727775, 0.155807 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_14" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.917647, 0.894118, 0.517647, 1 )
position = Vector2( 328, -1.52588e-05 )
rotation = -2.4837
scale = Vector2( 0.531251, 0.363504 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_11" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( -12.6229, -55.406 )
rotation = 0.489164
scale = Vector2( 0.72184, 0.44976 )
z_index = -1
texture = ExtResource( 10 )

[node name="ground_03" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.309804, 0.227451, 0.227451, 1 )
position = Vector2( 84.3917, 99.8701 )
scale = Vector2( 0.492013, 0.28081 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_04" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.309804, 0.227451, 0.227451, 1 )
position = Vector2( 320, -72 )
scale = Vector2( 0.4, 0.4 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_05" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.309804, 0.227451, 0.227451, 1 )
position = Vector2( -140.214, -41.5682 )
rotation = 0.582118
scale = Vector2( 0.396509, 0.245561 )
z_index = -1
texture = ExtResource( 11 )

[node name="ground_01" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( -115.756, 71.0003 )
scale = Vector2( 0.393704, 0.217976 )
z_index = -1
texture = ExtResource( 12 )

[node name="ground_02" type="Sprite" parent="YSort/BackgroundItems"]
modulate = Color( 0.345098, 0.227451, 0.227451, 1 )
position = Vector2( 160, 64 )
rotation = 4.6986
scale = Vector2( 0.113972, 0.803937 )
z_index = -1
texture = ExtResource( 12 )
offset = Vector2( 206.148, 2.80655 )

[node name="Area2D17" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 79.3571, -95.6286 )

[node name="Area2D18" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -8, -152 )

[node name="Area2D19" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 91.7462, 19.0462 )

[node name="Area2D20" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 104, -136 )

[node name="Area2D2" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -200, 232 )

[node name="Area2D3" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 312, 112 )

[node name="Area2D4" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 0, 224 )

[node name="Area2D5" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 14.8325, 84.757 )

[node name="Area2D6" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 91.6435, 110.714 )

[node name="Area2D" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -134.552, 74.6921 )

[node name="Area2D7" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -50.8542, 106.476 )

[node name="Area2D8" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -120.249, 42.9082 )

[node name="Area2D9" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -126.606, -2.11893 )

[node name="Area2D10" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -80.5192, -35.7689 )

[node name="Area2D11" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 192, -128 )

[node name="Area2D12" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -160, -152 )

[node name="Area2D21" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -256, -160 )

[node name="Area2D22" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -328, -32 )

[node name="Area2D23" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( -248, 112 )

[node name="Area2D24" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 96, 192 )

[node name="Area2D13" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 155.295, 34.6854 )

[node name="Area2D14" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 392, 24 )

[node name="Area2D15" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 376, -32 )

[node name="Area2D16" parent="YSort/BackgroundItems" instance=ExtResource( 9 )]
position = Vector2( 376, -112 )

[node name="MessageBox" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Textbox" type="ColorRect" parent="MessageBox"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
color = Color( 0.862745, 0.862745, 0.862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MessageBox/Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Oi mate, wanna pick a battle, ey?
Let me shank you!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="MessageBox/Textbox"]

[node name="Button" type="Button" parent="MessageBox/Textbox"]
margin_left = 436.54
margin_top = -21.3815
margin_right = 448.54
margin_bottom = -1.38155
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenShowcase" type="TextureButton" parent="MessageBox"]
margin_right = 39.0
margin_bottom = 43.0
texture_normal = ExtResource( 20 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Showcase" parent="MessageBox" instance=ExtResource( 21 )]
margin_top = -280.0
margin_bottom = -280.0

[node name="Tween" type="Tween" parent="MessageBox/Showcase"]

[connection signal="pressed" from="MessageBox/Textbox/Button" to="MessageBox" method="_on_Button_pressed"]
[connection signal="pressed" from="MessageBox/OpenShowcase" to="." method="_on_OpenShowcase_pressed"]
[connection signal="pressed" from="MessageBox/Showcase/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="MessageBox/Showcase"]
